--- a/index.html
+++ b/index.html
@@ -2,10 +2,11 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>My App</title>
+    <title>My App Testing</title>
   </head>
   <body>
     <p>This is my app!</p>
     <span>Login Form</span>
+    <p>Make a conflict!</p>
   </body>
 </html>
