Add feature and a conflict

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <p>This is my app!</p>
-    <span>Login Form</span>
+    <span>Login Form Conflict</span>
     <div>Make a Feature conflict</div>
   </body>
 </html>
